--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "electron-squirrel-startup": "^1.0.0",
+    "firebase": "^9.21.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-activity": "^2.1.3",
